corpus/main.txt
====================
Directives
====================

<div>
  <h1>Hello world!</h1>
  <h1>Hello world!</h1>
  <h1>Hello world!</h1>
  <h1>Hello world!</h1>
  <h1>Hello world!</h1>
  <h1>Hello world!</h1>
  {{ hello }}
  {{ messsage }}
  {{ if a }}
    {{ a }}
  {{ /if }}
</div>

---

(template
  (content)
  (tag (code))
  (content)
  (tag (code))
  (content)
  (tag (code))
  (content)
  (tag (code))
  (content)
  (tag (code))
  (content))

====================
Comments please
====================

<div>
  <h1>Hello world!</h1>
  {{# This is a comment #}}
  {{# a comment #}}
  {{# comment #}}
  {{# life is pain comment #}}
  {{ This is not a comment }}
  {{- This is not a comment }}
  {{ This is not a comment -}}
  {{- This is not a comment -}}
  {{#
    Multiline madness
    {{#}}
    {{##}}
    {{###}}
    {{####}}
    {{#####}}
    {{######}}
    {{#######}}
    {{########}}
    {{#########}} {{{{}} {{}}}}
    #}}
</div>

---

(template
  (content)
  (tag
    (comment))
  (content)
  (tag
    (comment))
  (content)
  (tag
    (comment))
  (content)
  (tag
    (comment))
  (content)
  (tag
    (code))
  (content)
  (tag
    (code))
  (content)
  (tag
    (code))
  (content)
  (tag
    (code))
  (content)
  (tag
    (comment))
  (content))
